# sdpremote

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  settings.toml  spec.yml
sdpremote/: __init__.py  alembic.ini  app.py  config.py  database.py  storage.py  user.py
sdpremote/alembic/: env.py
sdpremote/alembic/versions/: 3d748babd72d_add_checksum_to_storage_table.py  4cbaef1dee3d_add_objects_table.py  52811586999c_add_repos_table.py  5ecdf00d805e_add_metas_table.py  62ca5dfee7b1_add_scopes_table.py  6d36be018ad1_add_storage_table.py  6e301d833b85_add_owner_to_storage_table.py  d32ee62c4759_rename_name_column_to_scope_in_objects_.py
sdpremote/entities/: object.py  scope.py
sdpremote/routes/: object.py  repo.py  scope.py  upload.py
sdpremote/utils/: checksum.py  meta.py  object.py  scope.py
tests/: test_sdpremote.py  test_user.py
