[tool.poetry]
name = "sdpremote"
version = "0.1.0"
description = "This is simple example implementation of SDP"
authors = ["gudn <gudnmail@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.14.0"
fastapi = "^0.67.0"
dynaconf = "^3.1.4"
SQLAlchemy = "^1.4.22"
asyncpg = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
requests = "^2.26.0"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
